Change 'No' button action to redirect to Giphy
Updated the 'No' button's behavior to redirect to a Giphy link.

--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
 
     function goToGif() {
 
-      window.location.href = "./robin.gif";
+       window.location.href = "https://giphy.com/gifs/neil-patrick-harris-robin-ted-kJGLD1ctyrlqU"
 
     }
 </script>
 </body>
 </html>
+
  
